syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Cliente{
	rpc getClienteInfo(ClienteLookupModel) returns (ClienteModel);	
}

message ClienteLookupModel{
	int32 idCliente = 1;
}

message ClienteModel{
	string primeiroNome = 1;
	string ultimoNome = 2;
	string email = 3;
	int32 idade = 4;
}